2006-01-06  Andrew Cagney  <cagney@redhat.com>

	* LinuxProc.java (sendrecCmdLine): Implement using CmdLineBuilder.

2006-01-05  Andrew Cagney  <cagney@redhat.com>

	* LinuxProc.java (sendrecCmdLine): IMplement stub.
	* Proc.java (getCmdLine()): Add.
	(sendrecCmdLine()): Add, abstract.
	(argv): Add, private.
	* TestLib.java (Child.getArgv()): Add.
	(Child.Child(int)): Delete.
	* TestProcGet.java: Add .testGetCmdLine.

2006-01-04  Stan Cox  <scox@multics.rdu.redhat.com>

	* TestExec.java (testUnattachedSingleExec, testAttachedSingleExec): New.

2005-12-22  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java: Delete .PidChildXXX.

2005-12-21  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java: Add .AckProcess and .AckDaemonProcess constructors
	that take a boolean busy parameter to enable use of busy waits.
	* TestUnpaused.java: Use .AckDaemonProcess instead of
	XXX.infThreadLoop.
	* TestGoAndGo.java: Ditto.
	* TestPaused.java: Ditto.
	* TestStop.java: Ditto.
	* TestStopAndGo.java: Ditto.
	* TestStopAndStop.java: Ditto.
	* TestUnpaused.java: Ditto.
	
	* TestLib.java: Rename .PidChild to .PidChildXXX.
	* TestUnpaused.java: Update.
	* TestStop.java: Update.
	* TestStopAndStop.java: Update.
	* TestStopAndGo.java: Update.
	* TestPaused.java: Update.
	* TestGoAndGo.java: Update.

	* TestExec.java, TestGoAndGo.java, TestHostGet.java,
	TestI386Modify.java, TestI386Regs.java, TestLib.java,
	TestModify.java, TestPaused.java, TestProcGet.java,
	TestRefresh.java, TestRun.java, TestStep.java, TestStop.java,
	TestStopAndGo.java, TestStopAndStop.java, TestSyscall.java,
	TestSyscall2.java, TestSyscallInterrupt.java,
	TestSyscallOpen.java, TestTaskClonedObserver.java,
	TestTaskObserverBlocked.java, TestTasksObserver.java,
	TestUnpaused.java: Clean up assert text messages so that they
	state what is being checked, not the expected value or why.

2005-12-13  Andrew Cagney  <cagney@redhat.com>

	* Proc.java: Rename .observableTaskAdded to
	.observableTaskAddedXXX.
