@@ -1,3 +1,9 @@
+2006-01-07  Andrew Cagney  <cagney@redhat.com>
+
+	* LinuxProc.java (sendrecExe()): Add.
+	* TestProcGet.java (testGetExe()): Add.
+	* Proc.java (exe, sendrecExe(), getExe()): Add.
+
 2006-01-06  Andrew Cagney  <cagney@redhat.com>
 
 	* LinuxProc.java (sendrecCmdLine): Implement using CmdLineBuilder.
